atualizado imagem do docker

--- a/lab2/lab.conf
+++ b/lab2/lab.conf
@@ -1,6 +1,6 @@
 pc1[0]=A
 serverdhcp1[0]=A
-serverdhcp1[image]="kathara/dhcpserver"
+serverdhcp1[image]="filipemota12/dhcpserver"
 r1[0]=A
 r1[1]=B
 r2[1]=B
@@ -8,4 +8,4 @@ r2[bridged]=true
 r2[0]=C
 pc2[0]=C
 serverdhcp2[0]=C
-serverdhcp2[image]="kathara/dhcpserver"
+serverdhcp2[image]="filipemota12/dhcpserver"
